Setup files and considerting setting up sqlite3

--- a/public/package.json
+++ b/public/package.json
@@ -24,15 +24,19 @@
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.3.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "style-loader": "^1.0.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "antd": "^3.26.2",
     "history": "^4.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "remixicon": "^2.1.0"
   }
 }
