--- a/public/package.json
+++ b/public/package.json
@@ -36,6 +36,7 @@
     "history": "^4.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
     "react-router-dom": "^5.1.2",
     "remixicon": "^2.1.0"
   }
